--- a/platformio.ini
+++ b/platformio.ini
@@ -17,13 +17,13 @@ build_flags =
     -D CORE_DEBUG_LEVEL=4
     ;-D DEV_SETUP=0
 
-[env:heltec_wifi_lora_32_V2]
-platform = espressif32
-board = heltec_wifi_lora_32_V2
-framework = arduino
-lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags}
-monitor_speed = 115200
+;[env:heltec_wifi_lora_32_V2]
+;platform = espressif32
+;board = heltec_wifi_lora_32_V2
+;framework = arduino
+;lib_deps = ${common.lib_deps}
+;build_flags = ${common.build_flags}
+;monitor_speed = 115200
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
